--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,11 @@ buildscript {
     repositories {
         jcenter()
     }
-//    dependencies {
-//        classpath 'com.android.tools.build:gradle:1.3.0'
-//        classpath "com.android.databinding:dataBinder:1.+"
-//        // NOTE: Do not place your application dependencies here; they belong
-//        // in the individual module build.gradle files
-//    }
+
+
     dependencies {
-        classpath "com.android.tools.build:gradle:1.3.0"
+        classpath "com.android.tools.build:gradle:1.3.1"
+        classpath 'com.novoda:bintray-release:0.3.4'
     }
 }
 
