--- a/robo-tumblr/build.gradle
+++ b/robo-tumblr/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 23
@@ -8,7 +9,7 @@ android {
         minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     buildTypes {
         release {
@@ -16,6 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+publish {
+    groupId = 'com.github.sun40'
+    artifactId = 'robo-tumblr'
+    publishVersion = '1.0.0'
+    desc = 'Yet another library for Android to work with Tumblr API'
+    licences = ['MIT']
+    website = 'https://github.com/sun40/robo-tumblr'
 }
 
 dependencies {
